# magma_fields

./: .gitignore  CMakeLists.txt  FindGMP.cmake  README.md  TODO.txt  error.hpp  field.hpp  gmp.hpp  large_prime_field.hpp  lattice.cpp  lattice.hpp  logger.hpp  main.cpp  matrix.hpp  medium_prime_field.hpp  polynomial.hpp  polynomial_factorization.hpp  prime_factorization.hpp  prime_poly.hpp  random.cpp  random.hpp  small_prime_field.hpp  timing.hpp  util.hpp  vector.hpp  zech_field.hpp  zech_poly_field.hpp
fields/: field.hpp  large_prime_field.hpp  medium_prime_field.hpp  prime_poly.hpp  small_prime_field.hpp  zech_field.hpp  zech_poly_field.hpp
tables/: irreducible_polynomials.txt  prime_factorizations.txt
